--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,42 +1,48 @@
 .card {
-  display: flex;
-  flex-direction: column;
-  margin: 10px;
-  width: 23%;
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+    width: 23%;
 }
 
 .card > img {
-  object-fit: contain;  
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+    object-fit: contain;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
 
 .card__info {
-  border: 1px solid black;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  display: flex;
-  justify-content: space-between;
+    border: 1px solid black;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    display: flex;
+    justify-content: space-between;
 }
 
 .card__info > h1 {
-  font-size: 12px;
-  padding: 5px;
+    font-size: 12px;
+    padding: 5px;
 }
 
 .card__user {
-  padding-right: 10px;
+    padding-right: 10px;
 }
 
 .card__user > .MuiAvatar-root {
-  width: 25px;
-  height: 25px;
-  object-fit: contain;
-  margin: 2.5px;
+    width: 25px;
+    height: 25px;
+    object-fit: contain;
+    margin: 2.5px;
 }
 
 .card__user > p {
-  font-size: 10px;
-  font-weight: 500;
-  text-align: center;
+    font-size: 10px;
+    font-weight: 500;
+    text-align: center;
+}
+
+@media (max-width: 480px) {
+    .card {
+        width: 60vw;
+    }
 }
