--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,7 +1,7 @@
 .main {
-  margin-left: 20px;
-  flex: 1;
-  display: flex;
-  flex-wrap: wrap;
-  overflow-y: scroll;
+    padding: 10px;
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: scroll;
 }
